assets/css/default.css
/* ... */
.searchbar input[type="search"]:focus {
  border: none;
  background: transparent;
  outline: none;
  box-shadow: none;
  margin: 0;
}

/* https://stackoverflow.com/a/55170420 */
input[type="search"]::-webkit-search-cancel-button {
  -webkit-appearance: none;
  height: 14px;
  width: 14px;
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAn0lEQVR42u3UMQrDMBBEUZ9WfQqDmm22EaTyjRMHAlM5K+Y7lb0wnUZPIKHlnutOa+25Z4D++MRBX98MD1V/trSppLKHqj9TTBWKcoUqffbUcbBBEhTjBOV4ja4l4OIAZThEOV6jHO8ARXD+gPPvKMABinGOrnu6gTNUawrcQKNCAQ7QeTxORzle3+sDfjJpPCqhJh7GixZq4rHcc9l5A9qZ+WeBhgEuAAAAAElFTkSuQmCC);
  background-size: 14px;
  opacity: 0.6;
  cursor: pointer;
}

.searchbar #searchbutton {
  border: none;
  background: none;
  margin: 0;
  padding: 0 8px;
  color: #777;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.25rem;
  transition: color 0.2s ease, transform 0.2s;
}

.searchbar #searchbutton:hover {
  color: rgb(0, 182, 240);
  transform: scale(1.1);
}

.user-field {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}

.user-field div {
  width: auto;
}

.user-field div:not(:last-child) {
  margin-right: 1em;
}


/*
 * Responsive rules
 */

@media only screen and (max-aspect-ratio: 16/9) {
  .player-dimensions.vjs-fluid {
    padding-top: 46.86% !important;
  }

  #player-container {
    padding-bottom: 46.86% !important;
  }
}

@media screen and (max-width: 767px) {
  .navbar {
    flex-direction: column;
  }

  .navbar>div {
    display: flex;
    justify-content: center;
    margin-bottom: 25px;
  }

  .navbar>.searchbar>form {
    width: 75%;
  }

  h1 {
    font-size: 1.25em;
    margin: 0.42em 0;
  }

  /* Space out the subscribe & RSS buttons and align them to the left */
  .title.flexible {
    display: block;
  }

  .title.flexible>.flex-right {
    margin: 0.75em 0;
    justify-content: flex-start;
  }

  /* Space out buttons to make them easier to tap */
  .user-field {
    font-size: 125%;
  }

  .user-field> :not(:last-child) {
    margin-right: 1.75em;
  }

  .icon-buttons {
    font-size: 125%;
  }

  .icon-buttons> :not(:last-child) {
    margin-right: 0.75em;
  }
}

@media screen and (max-width: 320px) {
  .navbar>.searchbar>form {
    width: 100%;
    margin: 0 1em;
  }
}


/*
 * Video "cards" (results/playlist/channel videos)
 */

.video-card-row {
  margin: 15px 0;
}

p.channel-name {
  margin: 0;
  overflow-wrap: anywhere;
}

p.video-data {
  margin: 0;
  font-weight: bold;
  font-size: 80%;
}

.channel-profile>.channel-name {
  overflow-wrap: anywhere;
}


/*
 * Comments & community posts
 */

.comments {
  max-width: 800px;
  margin: auto;
}

/*
 * We don't want the top and bottom margin on the post page.
 */
.comments.post-comments {
  margin-bottom: 0;
  margin-top: 0;
}

.video-iframe-wrapper {
  position: relative;
  height: 0;
  padding-bottom: 56.25%;
}

.video-iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
}


/*
 * Page navigation
 */

.page-nav-container {
  margin: 15px 0 30px 0;
}

.page-prev-container {
  text-align: start;
}

.page-next-container {
  text-align: end;
}

.page-prev-container,
.page-next-container {
  display: inline-block;
}


/*
 * Footer
 */

footer {
  margin-top: auto;
  padding: 1.5em 0;
  text-align: center;
  max-height: 30vh;
}

.light-theme footer {
  color: #7c7c7c;
}

.dark-theme footer {
  color: #adadad;
}

.light-theme footer a {
  color: #7c7c7c !important;
}

.dark-theme footer a {
  color: #adadad !important;
}

footer span {
  margin: 4px 0;
  display: block;
}

/* keyframes */

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

fieldset>select,
span>select {
  color: rgba(49, 49, 51, 1);
}

.pure-control-group label {
  word-wrap: normal;
}


/*
 * Light theme
 */

.light-theme a:hover,
.light-theme a:active,
.light-theme summary:hover,
.light-theme a:focus,
.light-theme summary:focus {
  color: #075A9E !important;
}

.light-theme .pure-button-primary:hover,
.light-theme .pure-button-primary:focus,
.light-theme .pure-button-secondary:hover,
.light-theme .pure-button-secondary:focus {
  color: #fff !important;
  border-color: rgba(0, 182, 240, 0.75) !important;
  background-color: rgba(0, 182, 240, 0.75) !important;
}

.light-theme .pure-button-secondary:not(.low-profile) {
  color: #335d7a;
  background-color: #fff2;
}

.light-theme a {
  color: #335d7a;
  text-decoration: none;
}

/* All links that do not fit with the default color goes here */
.light-theme a:not([data-id])>.icon,
.light-theme .pure-u-lg-1-5>.h-box>a[href^="/watch?"],
.light-theme .playlist-restricted>ol>li>a {
  color: #303030;
}

.light-theme .pure-menu-heading {
  color: #565d64;
}

.light-theme .error-card {
  border: 1px solid black;
}
/* ... */

